; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_uio.c_uiomove_frombuf.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_uio.c_uiomove_frombuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uio = type { i64, i64 }

@EINVAL = common dso_local global i32 0, align 4
@IOSIZE_MAX = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uiomove_frombuf(i8* %0, i32 %1, %struct.uio* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.uio*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.uio* %2, %struct.uio** %7, align 8
  %10 = load %struct.uio*, %struct.uio** %7, align 8
  %11 = getelementptr inbounds %struct.uio, %struct.uio* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ult i64 %12, 0
  br i1 %13, label %27, label %14

14:                                               ; preds = %3
  %15 = load %struct.uio*, %struct.uio** %7, align 8
  %16 = getelementptr inbounds %struct.uio, %struct.uio* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = icmp slt i64 %17, 0
  br i1 %18, label %27, label %19

19:                                               ; preds = %14
  %20 = load %struct.uio*, %struct.uio** %7, align 8
  %21 = getelementptr inbounds %struct.uio, %struct.uio* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  store i64 %22, i64* %8, align 8
  %23 = load %struct.uio*, %struct.uio** %7, align 8
  %24 = getelementptr inbounds %struct.uio, %struct.uio* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp ne i64 %22, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %19, %14, %3
  %28 = load i32, i32* @EINVAL, align 4
  store i32 %28, i32* %4, align 4
  br label %54

29:                                               ; preds = %19
  %30 = load i32, i32* %6, align 4
  %31 = icmp sle i32 %30, 0
  br i1 %31, label %37, label %32

32:                                               ; preds = %29
  %33 = load i64, i64* %8, align 8
  %34 = load i32, i32* %6, align 4
  %35 = sext i32 %34 to i64
  %36 = icmp uge i64 %33, %35
  br i1 %36, label %37, label %38

37:                                               ; preds = %32, %29
  store i32 0, i32* %4, align 4
  br label %54

38:                                               ; preds = %32
  %39 = load i32, i32* %6, align 4
  %40 = sext i32 %39 to i64
  %41 = load i64, i64* %8, align 8
  %42 = sub i64 %40, %41
  store i64 %42, i64* %9, align 8
  %43 = load i64, i64* @IOSIZE_MAX, align 8
  %44 = icmp ugt i64 %42, %43
  br i1 %44, label %45, label %47

45:                                               ; preds = %38
  %46 = load i32, i32* @EINVAL, align 4
  store i32 %46, i32* %4, align 4
  br label %54

47:                                               ; preds = %38
  %48 = load i8*, i8** %5, align 8
  %49 = load i64, i64* %8, align 8
  %50 = getelementptr inbounds i8, i8* %48, i64 %49
  %51 = load i64, i64* %9, align 8
  %52 = load %struct.uio*, %struct.uio** %7, align 8
  %53 = call i32 @uiomove(i8* %50, i64 %51, %struct.uio* %52)
  store i32 %53, i32* %4, align 4
  br label %54

54:                                               ; preds = %47, %45, %37, %27
  %55 = load i32, i32* %4, align 4
  ret i32 %55
}

declare dso_local i32 @uiomove(i8*, i64, %struct.uio*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
